--- a/style.css
+++ b/style.css
@@ -3382,3 +3382,14 @@ textarea {
     width: 35%;
     bottom: 5%;
     }
+
+    @media only screen and (max-width: 500px){
+        .smallText{
+            font-size: 45px;
+        }
+    }
+    @media only screen and (min-width: 1200px){
+        .smallText{
+            font-size: 2vw;
+        }
+    }
